<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_bookmark"
        android:checked="false"
        android:icon="@drawable/ic_star_empty"
        android:title="Add to Bookmark"
        app:showAsAction="always" />

    <item
        android:id="@+id/remove_bookmark"
        android:checked="false"
        android:icon="@drawable/ic_star_filled"
        android:visible="false"
        android:title="Remove From Bookmark"
        app:showAsAction="always" />

</menu>