...

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@+id/bookmarked"
                android:text="@{viewModel.item.project.fullName}"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/bookmarked"
...
